Updated Resume page so that project images do not have text in them and that they now use a common image as the background

--- a/projects/personalPortfolio/resume.html
+++ b/projects/personalPortfolio/resume.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Andre Morales - Resume</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Coda' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../css/rpg-awesome.min.css">
     <link rel="stylesheet" href="../../css/index.css">
@@ -41,21 +42,27 @@
                 <div class="project col-xs-12 col-md-4">
                     <div class="project-content">
                         <h4>MATC Portfolio Project</h4>
-                        <a href="/MATC_Projects/index.html" class="project-portfolio"></a>
+                        <a href="/MATC_Projects/index.html" class="project-portfolio">
+                            <span>&lt;Portfolio&gt;</span>
+                        </a>
                         <h5>Role: Designer & Programmer</h5>
                     </div>
                 </div>
                 <div class="project col-xs-12 col-md-4">
                     <div class="project-content">
                         <h4>Interactive Resume</h4>
-                        <a href="#" class="project-resume"></a>
+                        <a href="#" class="project-resume">
+                            <span>&lt;Interactive Resume&gt;</span>
+                        </a>
                         <h5>Role: Designer & Programmer</h5>
                     </div>
                 </div>
                 <div class="project col-xs-12 col-md-4">
                     <div class="project-content">
                         <h4>Golf Project</h4>
-                        <a href="#" class="project-golf"></a>
+                        <a href="#" class="project-golf">
+                            <span>&lt;Golf Project&gt;</span>
+                        </a>
                         <h5>Role: Designer & Programmer</h5>
                     </div>
                 </div>
