--- a/projects/personalPortfolio/resume.html
+++ b/projects/personalPortfolio/resume.html
@@ -320,7 +320,10 @@
                             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> October 2007 - August 2009</small></p>
                         </div>
                         <div class="timeline-body">
-                            <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                            <p>
+                                The job that moved me to Utah.  Here I worked on many games that never saw the light of day. At final count, I believe I worked on around 20+ design docs.
+                                Work included testing, system design, design reviews, UX design, and gameplay programming using proprietary tools.
+                            </p>
                             <hr>
                             <button class="btn keyAccomplishments" type="button" data-toggle="collapse" data-target="#gameDesigner" aria-expanded="false" aria-controls="gameDesigner">
                                 <i class="ra ra-key button-icon"></i> Key Accomplishments
