Uploading golf project and associated files

--- a/projects/personalPortfolio/resume.html
+++ b/projects/personalPortfolio/resume.html
@@ -60,7 +60,7 @@
                 <div class="project col-xs-12 col-md-4">
                     <div class="project-content">
                         <h4>Golf Project</h4>
-                        <a href="#" class="project-golf">
+                        <a href="/MATC_Projects/projects/golfProject/golfScoreCard.html" class="project-golf">
                             <span>&lt;Golf Project&gt;</span>
                         </a>
                         <h5>Role: Designer & Programmer</h5>
@@ -400,6 +400,8 @@
                 <div class="col-xs-6 col-sm-3">
                     <h3>Interactive Resume</h3>
                     <a class="footer-link" href="#">Interactive Resume</a>
+                    <h3>Golf Score Card</h3>
+                    <a class="footer-link" href="/MATC_Projects/projects/golfProject/golfScoreCard.html">Golf Score Card</a>
                 </div>
                 <div class="clearfix visible-xs-block"></div>
                 <div class="col-xs-6 col-sm-3">
