--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@
             </div>
             <div class="col-sm-12 col-md-4">
                 <!--http://www.cssportal.com/blog/create-corner-ribbon/-->
-                <div class="ribbon red"><span>Coming Soon</span></div>
+                <div class="ribbon"><span>Done</span></div>
                 <div class="badge-container">
                     <img class="img-circle token-badge" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
                 </div>
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Backend Project</h3>
+                        <h3 class="panel-title">Golf Score Card</h3>
                     </div>
                     <div class="panel-body">
                         <div class="list-group">
-                            <a href="#" class="list-group-item disabled">Assignment Not Started</a>
+                            <a href="/MATC_Projects/projects/golfProject/golfScoreCard.html" class="list-group-item">Golf Score Card<span class="badge badge-done">Done</span></a>
                         </div>
                     </div>
                 </div>
@@ -173,6 +173,8 @@
             <div class="col-xs-6 col-sm-3">
                 <h3>Interactive Resume</h3>
                 <a class="footer-link" href="#">Interactive Resume</a>
+                <h3>Golf Score Card</h3>
+                <a class="footer-link" href="/MATC_Projects/projects/golfProject/golfScoreCard.html">Golf Score Card</a>
             </div>
             <div class="clearfix visible-xs-block"></div>
             <div class="col-xs-6 col-sm-3">
