--- a/projects/personalPortfolio/about.html
+++ b/projects/personalPortfolio/about.html
@@ -128,12 +128,14 @@
                     <h3>Personal Portfolio</h3>
                     <a class="footer-link" href="/MATC_Projects/index.html">Home</a>
                     <a class="footer-link" href="/MATC_Projects/index.html#portfolio">Portfolio</a>
-                    <a class="footer-link" href="/MATC_Projects/projects/personalPortfolio/about.html">About</a>
+                    <a class="footer-link" href="#">About</a>
                     <a class="footer-link" href="/MATC_Projects/projects/personalPortfolio/resume.html">Resume</a>
                 </div>
                 <div class="col-xs-6 col-sm-3">
                     <h3>Interactive Resume</h3>
-                    <a class="footer-link" href="#">Interactive Resume</a>
+                    <a class="footer-link" href="/MATC_Projects/projects/personalPortfolio/resume.html">Interactive Resume</a>
+                    <h3>Golf Score Card</h3>
+                    <a class="footer-link" href="/MATC_Projects/projects/golfProject/golfScoreCard.html">Golf Score Card</a>
                 </div>
                 <div class="clearfix visible-xs-block"></div>
                 <div class="col-xs-6 col-sm-3">
