--- a/projects/golfProject/golfScoreCard.html
+++ b/projects/golfProject/golfScoreCard.html
@@ -161,7 +161,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="../personalPortfolio/js/golfCard.js"></script>
+    <script src="js/golfCard.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBluNeqDmmj31_6VdVUy2JPUXvr1MJSlTk" async defer></script>
 
 </body>
