Added links to Astroiders on the home page and updated footers so that you can navigate to the project

--- a/projects/personalPortfolio/about.html
+++ b/projects/personalPortfolio/about.html
@@ -125,21 +125,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-6 col-sm-3">
-                    <h3>Personal Portfolio</h3>
+                    <h3>Basic HTML</h3>
                     <a class="footer-link" href="/MATC_Projects/index.html">Home</a>
                     <a class="footer-link" href="/MATC_Projects/index.html#portfolio">Portfolio</a>
-                    <a class="footer-link" href="#">About</a>
+                    <a class="footer-link" href="/MATC_Projects/projects/personalPortfolio/about.html">About</a>
                     <a class="footer-link" href="/MATC_Projects/projects/personalPortfolio/resume.html">Resume</a>
                 </div>
                 <div class="col-xs-6 col-sm-3">
-                    <h3>Interactive Resume</h3>
+                    <h3>Javascript</h3>
                     <a class="footer-link" href="/MATC_Projects/projects/personalPortfolio/resume.html">Interactive Resume</a>
-                    <h3>Golf Score Card</h3>
                     <a class="footer-link" href="/MATC_Projects/projects/golfProject/golfScoreCard.html">Golf Score Card</a>
+                    <a class="footer-link" href="/MATC_Projects/projects/astroiders/astroiders.html">Astroiders</a>
                 </div>
                 <div class="clearfix visible-xs-block"></div>
                 <div class="col-xs-6 col-sm-3">
-                    <h3>Backend Project</h3>
+                    <h3>Angular</h3>
                     <a class="footer-link" href="#">Backend Project</a>
                 </div>
                 <div class="col-xs-6 col-sm-3">
