Uploading ToDo Angular app, link in homepage

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             <div class="col-sm-12 col-md-4">
                 <!--http://www.cssportal.com/blog/create-corner-ribbon/-->
-                <div class="ribbon red"><span>Not Started</span></div>
+                <div class="ribbon red"><span>In Progress</span></div>
                 <div class="badge-container">
                     <img class="img-circle token-badge" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
                 </div>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="panel-body">
                         <div class="list-group">
-
+                            <a href="projects/toDoList/index.html" class="list-group-item">ToDo App<span class="badge badge-done">Done</span></a>
                         </div>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
             <div class="clearfix visible-xs-block"></div>
             <div class="col-xs-6 col-sm-3">
                 <h3>Angular</h3>
-                <a class="footer-link" href="#">Backend Project</a>
+                <a class="footer-link" href="/MATC_Projects/projects/toDoList/index.html">ToDo App</a>
             </div>
             <div class="col-xs-6 col-sm-3">
                 <h3>Connect</h3>
