--- a/projects/personalPortfolio/about.html
+++ b/projects/personalPortfolio/about.html
@@ -140,7 +140,7 @@
                 <div class="clearfix visible-xs-block"></div>
                 <div class="col-xs-6 col-sm-3">
                     <h3>Angular</h3>
-                    <a class="footer-link" href="#">Backend Project</a>
+                    <a class="footer-link" href="/MATC_Projects/projects/toDoList/index.html">ToDo App</a>
                 </div>
                 <div class="col-xs-6 col-sm-3">
                     <h3>Connect</h3>
