--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                     <div class="panel-body">
                         <div class="list-group">
                             <a href="projects/toDoList/index.html" class="list-group-item">ToDo App<span class="badge badge-done">Done</span></a>
+                            <a href="projects/toDoListV2/index.html" class="list-group-item">ToDo App v2<span class="badge badge-done">Done</span></a>
                         </div>
                     </div>
                 </div>
@@ -182,6 +183,7 @@
             <div class="col-xs-6 col-sm-3">
                 <h3>Angular</h3>
                 <a class="footer-link" href="/MATC_Projects/projects/toDoList/index.html">ToDo App</a>
+                <a class="footer-link" href="/MATC_Projects/projects/toDoListV2/index.html">ToDo App v2</a>
             </div>
             <div class="col-xs-6 col-sm-3">
                 <h3>Connect</h3>
