--- a/projects/personalPortfolio/about.html
+++ b/projects/personalPortfolio/about.html
@@ -141,6 +141,7 @@
                 <div class="col-xs-6 col-sm-3">
                     <h3>Angular</h3>
                     <a class="footer-link" href="/MATC_Projects/projects/toDoList/index.html">ToDo App</a>
+                    <a class="footer-link" href="/MATC_Projects/projects/toDoListV2/index.html">ToDo App v2</a>
                 </div>
                 <div class="col-xs-6 col-sm-3">
                     <h3>Connect</h3>
